<resources>
    <string name="app_name">Ino Hub</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Preferences_file_name">Ino Hub Shared Preferences</string>
    <string name="ino_hub">Ino Hub</string>
    <string name="open">Open_Drawer</string>
    <string name="close">Close_Drawer</string>
    <string name="submit">Submit</string>
    <string name="logout_menu">Logout</string>
    <string name="home">Home</string>
    <string name="startups">Startups</string>
    <string name="mentors">Mentors</string>
    <string name="investors">Investors</string>
    <string name="fundings">Fundings</string>
    <string name="resources">Resources</string>
    <string name="collaborators">Collaborators</string>
    <string name="startup_page">Startup Page</string>
    <string name="about_us_txt">About Us:-\n\nWe are Team Bytes and we are creating a Community driven startup application.</string>
    <string name="about_us">About Us</string>
    <string name="mentors_page">Mentors Page</string>
    <string name="funding_page">Funding Page</string>
    <string name="resources_page">Resources Page</string>
    <string name="investor_page">Investor Page</string>
    <string name="home_page">Home Page</string>
    <string name="Skippi_D"><![CDATA[Skippi In a nutshell A desire to revive the love for chuskis in a more natural way sparked the creation of India\'s first ice pop brand. It all began when a family member packed ice pops for her trip to India, realizing how difficult it would be to find hygienic and trusted brands of ice pops there. Ravi and Anuja Kabra quickly recognized the product\'s potential in the Indian market. With over 17 years of experience in the food and beverage industry and working with multinational corporations, the couple conducted primary and secondary research to gain a better understanding of the untapped market. The goal from the beginning was to create refreshing, teeth-friendly icy treats for their own children and customers.]]></string>
    <string name="RP_D">Rare Planet, Kolkata Base is a retail lifestyle startup launched in 2017 which promotes and sells Indigenous Indian Handicrafts in offline and online markets along with giving a sustainable income to local artisans. Ranodeep Saha and Vijay Kumar TR are the co-founders of Rare Planet.</string>
    <string name="SS_D">The souled store.Vedang Patel, Aditya Sharma, Rohin Samtaney, and Harsh Lal.We create and curate stunning designs and print them on all sorts of equally stunning products- from t-shirts to phone covers to backpacks to boxers to mugs to socks to badges to pins to hoodies and many, many more! Our funky products are designed and printed specifically to spread happiness, right down to the bottom of your ‘soul’. A recent study by our internal, self-funded, fashion forward (and totally unbiased) team showed that if you buy from www.thesouledstore.com, it increases your lifespan by 7.5%. So if you’re looking for great products, with even greater deals and discounts, you’ve come to the right place!</string>
    <string name="HAM_D">HAMMER provides the care that you need in this busy life. HAMMER while covering healthcare necessities provides with stylish, sleekish and durable designs. Hammer Lifestyle products are meant to last in terms of quality and be lasting in terms of the impression they make. Our commitment towards a futuristic lifestyle has been well received and reciprocated by all of you.</string>
    <string name="rakesh_jhunjhunwala_N">Rakesh Jhunjhunwala</string>
    <string name="rakesh_jhunjhunwala_C">Rare Enterprises</string>
    <string name="rakesh_jhunjhunwala_B">Known as the "Warren Buffett of India," Rakesh Jhunjhunwala is a successful investor with a keen eye for stock market opportunities.</string>
    <string name="Radhakishan_Damani_N">Radhakishan Damani</string>
    <string name="Radhakishan_Damani_C">Avenue Supermarts (D-Mart)</string>
    <string name="Radhakishan_Damani_B">Founder of D-Mart, Radhakishan Damani is a shrewd investor known for his value investing principles.</string>
    <string name="Vijay_Kedia_N">Vijay Kedia</string>
    <string name="Vijay_Kedia_C">Kedia Securities</string>
    <string name="Vijay_Kedia_B">Vijay Kedia is a renowned investor known for his ability to identify multibagger stocks and his insightful investment strategies.</string>
    <string name="Ramesh_Damani_N">Ramesh Damani</string>
    <string name="Ramesh_Damani_C">Member of Bombay Stock Exchange</string>
    <string name="Ramesh_Damani_B">Ramesh Damani is a prominent stock market participant and financial commentator known for his contrarian investment approach.</string>
    <string name="Porinju_Veliyath_N">Porinju Veliyath</string>
    <string name="Porinju_Veliyath_C">Equity Intelligence India</string>
    <string name="Porinju_Veliyath_B">Porinju Veliyath is a successful investor and fund manager known for his expertise in mid-cap and small-cap stocks.</string>
    <string name="Raamdeo_Agrawal_N">Raamdeo Agrawal</string>
    <string name="Raamdeo_Agrawal_C">Motilal Oswal Financial Services</string>
    <string name="Raamdeo_Agrawal_B">Co-founder of Motilal Oswal Financial Services, Raamdeo Agrawal is known for his fundamental analysis and long-term investing approach.</string>
</resources>