<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/startup"
            android:icon="@drawable/ic_startup"
            android:title="@string/startups" />

        <item
            android:id="@+id/mentor"
            android:icon="@drawable/ic_mentor"
            android:title="@string/mentors"/>

        <item
            android:id="@+id/funding"
            android:icon="@drawable/ic_funding"
            android:title="@string/fundings"/>

        <item
            android:id="@+id/resource"
            android:icon="@drawable/ic_resource"
            android:title="@string/resources"/>

        <item
            android:id="@+id/investor"
            android:icon="@drawable/ic_investor"
            android:title="@string/investors" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_menu"/>
    </group>
</menu>