<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartupFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewmesssages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/S1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/skippi"
                    android:layout_marginStart="40dp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/S1_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Skippi_D"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/S1"
                    tools:ignore="VisualLintLongText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/S2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/rp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/S2_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RP_D"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/S2"
                    tools:ignore="VisualLintLongText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/S3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/tss"
                    android:layout_marginStart="40dp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/S3_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SS_D"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/S3"
                    tools:ignore="VisualLintLongText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/S4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ham"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/S4_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HAM_D"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/S4"
                    tools:ignore="VisualLintLongText" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>